Corrected pixel gap in navbar switch and added missing profile image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,7 +138,7 @@ body {
 	.wide {display:none !important;}
 }
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
 	.narrow {display:none !important;}
 }
 
